@@ -196,11 +196,11 @@ elisp-emacs-version() {
 # Generate a file with autoload definitions for the lisp functions.
 
 elisp-make-autoload-file() {
-	local f="${1:-${PN}-autoloads.el}" null=""
+	local f="${1:-${PN}-autoloads.el}" null="" page=$'\f'
 	shift
 	ebegin "Generating autoload file for GNU Emacs"
 
-	sed 's/^FF/\f/' >"${f}" <<-EOF
+	cat >"${f}" <<-EOF
 	;;; ${f##*/} --- autoloads for ${P}
 
 	;;; Commentary:
@@ -208,7 +208,7 @@ elisp-make-autoload-file() {
 	;; DO NOT EDIT THIS FILE
 
 	;;; Code:
-	FF
+	${page}
 	;; Local ${null}Variables:
 	;; version-control: never
 	;; no-byte-compile: t
