@@ -1,3 +1,9 @@
+2009-09-27  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-make-autoload-file): Don't substitute
+	the "new page" character with sed, since the string could occur in
+	the package name. Use a shell variable instead.
+
 2009-09-15  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp.eclass (elisp_src_compile): Fix typo, bug 285045.
